--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -13,7 +13,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         .fa.fa-toggle-on(ng-show='opt.showLogos') &nbsp;On Logos
         .fa.fa-toggle-off(ng-show='!opt.showLogos') &nbsp;Off Logos
   div(ng-show='curState.block_meta.blocks')
-    h4 Active State: {{curState._id}}
+    h4 Active State: {{curState._id}} &nbsp;&nbsp; {{curState.name}}
     h4 # Moves: {{curState.block_states.length}} &nbsp; # Blocks: {{curState.block_meta.blocks.length}}
     span(ng-repeat='block in curState.block_meta.blocks')
       | &nbsp;&nbsp;
