--- a/bwapp2/client/angle/less/app/bootstrap-reset.import.less
+++ b/bwapp2/client/angle/less/app/bootstrap-reset.import.less
@@ -2,7 +2,7 @@
    Component: bootstrap-reset.less
  ========================================================================== */
 
-@import "../../../../public/vendor/fontawesome/css/font-awesome.min.css";
+//@import "../../../../public/vendor/fontawesome/css/font-awesome.min.css";
 
 
 [ng\:cloak], 
