--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -62,7 +62,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       b(ng-show='curcnt > -1', style='font-size:1.25em') Create Count: {{curcnt}}
       br
       b(ng-show='curitr > -1', style='font-size:1.25em') Current State: {{curitr}}
-    div.col-sm-5
+    //-div.col-sm-5
       | Move camera by clicking and dragging in scene
     div.col-sm-12
       canvas(id="renderCanvasBab", style='width: 480px; height: 360px;')
