--- a/bwapp2/client/views/partials/top-navbar.ng.jade
+++ b/bwapp2/client/views/partials/top-navbar.ng.jade
@@ -53,6 +53,10 @@ nav.navbar.topnavbar(role="navigation")
               .fa.fa-cubes
               | &nbsp;Generate
           li
+            a(href="/genpred")
+              .fa.fa-android
+              | &nbsp;Prediction
+          li
             a(href="/genjobs")
               .fa.fa-inbox
               | &nbsp;Jobs
